arrow button mobile devices fix - test 5

--- a/src/common.blocks/arrow-button/styl/arrow-button.styl
+++ b/src/common.blocks/arrow-button/styl/arrow-button.styl
@@ -18,24 +18,20 @@
       background-color color-bg
       border-color white
   &:hover       
-    @media (hover: hover)
-      background-color color-cold
+    background-color color-cold
     & .arrow-button__arrow
-      @media (hover: hover)
-        background-color color-cold
-        border-color white
+      background-color color-cold
+      border-color white
   &:focus
     background-color color-cold
     & .arrow-button__arrow
       background-color color-cold
-      border-color white      
+      border-color white     
   &:active
-    @media (hover:none)
-      background-color color-cold
+    background-color color-cold
     & .arrow-button__arrow
-      @media (hover:none)
-        background-color color-cold
-        border-color white
+      background-color color-cold
+      border-color white
   &_active
     &.arrow-button_direction_right
       transform translateX(1px)
